2009-07-07  Jiahua Huang  <jhuangjiahua@gmail.com>

Reviewed by Jan Alonzo.

        [Gtk] Paste of rich text from firefox results garbled markup
        https://bugs.webkit.org/show_bug.cgi?id=26791

        Fix problem with UTF-16 clipboard pasted.

        * manual-tests/gtk/paste-richtext-from-firefox.html: Added.
        * platform/gtk/PasteboardGtk.cpp:
        (WebCore::Pasteboard::documentFragment):

git-svn-id: svn://svn.chromium.org/blink/trunk@45592 bbb929c8-8fbe-4397-9dbb-9b2b20218538